[package]
name = "tokio-process-stream"
description = "Simple crate that wraps a tokio::process into a tokio::stream"
version = "0.1.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/tokio-process-stream"
repository = "https://github.com/lpenz/tokio-process-stream"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio-util = { version = "0.6.9", features = ["io"] }
pin-project-lite = "0.2.8"
bytes = "1"
