[package]
name = "tokio-process-stream"
description = "Simple crate that wraps a tokio::process into a tokio::stream"
version = "0.3.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/tokio-process-stream"
repository = "https://github.com/lpenz/tokio-process-stream"
categories = ["asynchronous"]
keywords = ["tokio", "stream", "async-stream", "process"]

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio-util = { version = "0.7.2", features = ["io"] }
pin-project-lite = "0.2.9"
bytes = "1.1.0"
futures = "0.3.21"
